donation modal size fix on mobile

--- a/index.css
+++ b/index.css
@@ -1,14 +1,12 @@
-
 html {
   background-image: url(assets/portrait.png),
     linear-gradient(to left, #637ec3, #313992);
   background-position: right;
   background-repeat: no-repeat;
   background-size: contain;
-
 }
 
-main{
+main {
   padding: 0;
   margin-inline: 0;
 }
@@ -17,17 +15,15 @@ main{
   background: #000000c1;
   box-shadow: 10px 10px 6px rgba(0, 0, 0, 0.525);
   border-radius: 5px;
- padding: 40px;
+  padding: 40px;
   max-width: 100px;
   min-width: 500px;
-
 }
 
 img {
   border-radius: 5px;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.525);
   margin-left: 80px;
-
 }
 
 dialog::backdrop {
@@ -69,9 +65,7 @@ p {
 
 #donation-modal a {
   margin: 20px;
-  
 }
-
 
 #donation-modal h1 {
   font-family: Arial, Helvetica, sans-serif;
@@ -124,14 +118,11 @@ button:active {
     background-position: bottom;
     background-image: url(assets/portrait.png),
       linear-gradient(to top, #637ec3, #313992);
-    width:100%;
-    
+    width: 100%;
   }
 
   body {
     flex-flow: column-reverse;
-    
-    
   }
 
   p {
@@ -143,7 +134,6 @@ button:active {
   img {
     width: 81vw;
     margin: 20px;
-    
   }
 
   #intro-section {
@@ -169,26 +159,32 @@ button:active {
   #intro-section button {
     border-width: 4px;
     box-shadow: 10px 10px 6px rgba(0, 0, 0, 0.525);
-
   }
 
   #intro-section p {
     display: none;
   }
 
-  img{
-    width:60vw;
+  #donation-modal {
+    height: 300px;
+    overflow: hidden;
+  }
+
+  #donation-modal a {
+    font-size: 1.4rem;
+  }
+
+  img {
+    width: 60vw;
   }
 }
 
-@media only screen and (min-width: 768px) and (orientation: portrait)
-{
-  p{
+@media only screen and (min-width: 768px) and (orientation: portrait) {
+  p {
     font-size: 2.2rem;
     line-height: 2.3rem;
-
   }
-  #intro-section{
+  #intro-section {
     padding: 56px;
   }
 }
